# fix-vulns-pypi

cloneOne/: pom.xml
cloneTwo/: pom.xml
fake-vulnerabilities-java-gradle/: build.gradle  settings.gradle
fake-vulnerabilities-java-gradle/module1/: build.gradle
fake-vulnerabilities-java-gradle/module2/: build.gradle
fake-vulnerabilities-java-maven/: pom.xml
fake-vulnerabilities-java-maven/module-gradle1/: settings.gradle
fake-vulnerabilities-java-maven/module-maven/: pom.xml
fake-vulnerabilities-java-maven/module-maven1/: pom.xml
fake-vulnerabilities-java-maven/module-maven2/: pom.xml
fake-vulnerabilities-npm/: .gitignore  package-lock.json  package.json
fake-vulnerabilities-python-pip/: .gitignore  requirements.txt
fake-vulnerabilities-python-pip-file-lock/: cyclonedx.xml
fake-vulnerabilities-python-poetry/: pyproject.toml
fake-vulnerabilities-python-poetry-file-lock/: pyproject.toml
