[tool.poetry]
name = "ms2pip"
version = "3.7.1"
description = "MS²PIP: MS² Peak Intensity Prediction"
authors = ["Sven Degroeve", "Ralf Gabriels", "Kevin Velghe", "Ana Sílvia C. Silva"]

[build-system]
requires = ["setuptools", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
tensorflow = "2.7.0"
[tool.poetry.dev-dependencies]
cython = "*"
pytest = "*"